fix: update styles and delete use case that do the project crash

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -104,8 +104,11 @@
 }
 
 .logo {
-  height: 1em;
-  margin-left: 0.5rem;
+  margin-left: 1rem;
+}
+
+.logo * img {
+  border-radius: 25%;
 }
 
 @media (max-width: 600px) {
